<resources>
    <string name="app_name">My Application</string>
    <string name="topic_name">topic name</string>
    <string name="fab_content_desc">topic downlaod button</string>
    <string name="topic_thumbnail">topic thumbnail</string>
    <string name="download_button">download</string>
    <string name="topic_dowload_status">topic dowload_ tatus</string>
    <string name="topic_download_status">topic download status</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_card_button">add card button</string>
    <string name="topic_list">TOPIC LIST</string>
    <string name="topic_header">TOPIC LIST</string>
    <string name="word"> new word</string>
    <string name="word_meaning">word meaning</string>
    <string name="word_pronoun">word pronoun</string>
    <string name="word_content">Word content</string>
    <string name="word_image">Word_ mage</string>
    <string name="add">ADD</string>
    <string name="topicname">TopicName</string>
    <string name="word_hint">hint</string>
    <string name="word_mean">word mean</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="change">CHANGE</string>
    <string name="play">Play</string>
    <string name="learned">Learned</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
</resources>