<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/topic_download_status"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/topic_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/topic_thumbnail"
                app:layout_constraintVertical_bias="0.142"
                app:srcCompat="@drawable/baseline_get_app_black_18dp"
                android:contentDescription="@string/topic_download_status" />

            <TextView
                android:id="@+id/topic_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/topic_name"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/topic_download_status"
                app:layout_constraintStart_toStartOf="@+id/topic_thumbnail"
                app:layout_constraintTop_toBottomOf="@+id/topic_thumbnail"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/topic_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:contentDescription="@string/topic_thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
