<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/word_name_header_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="30dp"
        android:padding="20dp"
        android:text="TextView"
        android:textColor="@color/black"
        app:drawableStartCompat="@drawable/ic_folder"
        app:drawableLeftCompat="@drawable/ic_folder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <Button-->
<!--        android:id="@+id/play_button_bottom_sheet"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/white"-->
<!--        android:drawableStart="@drawable/ic_play"-->
<!--        android:drawableLeft="@drawable/ic_play"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:padding="10dp"-->
<!--        android:text="@string/play"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/word_name_header_bottom_sheet"-->
<!--        tools:layout_editor_absoluteX="-16dp"-->
<!--        tools:ignore="RtlSymmetry" />-->

    <Button
        android:id="@+id/remember_button_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_star"
        android:drawablePadding="20dp"
        android:padding="10dp"
        android:text="@string/learned"
        app:layout_constraintTop_toBottomOf="@+id/word_name_header_bottom_sheet"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/edit_button_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_edit"
        android:drawableStart="@drawable/ic_edit"
        android:drawablePadding="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/remember_button_bottom_sheet"
        android:text="@string/edit" />

    <Button
        android:id="@+id/delete_word_button_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableLeft="@drawable/ic_delete"
        android:drawableStart="@drawable/ic_delete"
        android:drawablePadding="20dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_button_bottom_sheet"
        android:text="@string/delete" />


</androidx.constraintlayout.widget.ConstraintLayout>